--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,8 +4,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs col-md-9">
-    <%= f.input :email, required: true, autofocus: true, class: 'form-control' %>
-    <%= f.input :password, label: "Senha", required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class: 'form-control' %>
+    <%= f.input :nome, required: true, autofocus: true, class: 'form-control', placeholder: "Nome Completo" %>
+    <%= f.input :email, required: true, autofocus: true, class: 'form-control', placeholder: "Email válido para envio de notas fiscais" %>
+    <%= f.input :cpf, required: true, autofocus: true, class: 'form-control', placeholder: "CPF" %>
+    <%= f.input :endereco, required: true, autofocus: true, class: 'form-control', placeholder: "Endereço Completo" %>
+    <%= f.input :telefone, required: true, autofocus: true, class: 'form-control', placeholder: "Telefone" %>
+    <%= f.input :password, label: "Senha", required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length), class: 'form-control' %>
     <%= f.input :password_confirmation, label: "Confirmação de Senha", required: true, class: 'form-control' %>
     <%= f.button :submit, "Cadastrar", class: 'btn btn-primary' %><br>
     <%= render "devise/shared/links" %>
