--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,19 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
- /* @import "normalize.css.scss";
- * @import "global.css.scss";
-*/
+
+ .wrapper {
+ 	width: 80%;
+ 	margin: 0 auto;
+ }
+
+ #logo {
+	font-size: 26px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	padding: 15px 0;
+	a {
+		color: #2F363E;
+	}
+}
