--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,10 +6,25 @@
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
 %body
-  .container
-    .col-md-9.center-block
-      - flash.each do |name, msg|
-        = content_tag(:div, msg, class: "alert alert-info")
+  %header.navbar.navbar-default{:role => "navigation"}
+    .navbar-inner
+      .container
+        #logo.navbar-brand= link_to "ITABORAÍ ROTATIVO", root_path
+        %nav.collapse.navbar-collapse.navbar-ex1-collapse
+          - if user_signed_in?
+            %ul
+              .nav.navbar-nav.navbar-right
+                %li
+                  = link_to "Novo Bilhete", "#", class: "btn btn-default"
+                %li
+                  = link_to "Sair do Sistema", destroy_user_session_path, method: :delete, class: "btn btn-default"
+          - else
+            %ul
+              .nav.navbar-nav.pull-right
+                %li
+                  = link_to "Entrar", new_user_session_path, class: "btn btn-default"
+                %li
+                  = link_to "Cadastrar", new_user_registration_path, class: "btn btn-default"
 
-    .col-md-12
-      = yield
+  .container
+    = yield
