--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs col-md-9">
     <%= f.input :nome, required: true, autofocus: true, class: 'form-control', placeholder: "Nome Completo" %>
     <%= f.input :email, required: true, autofocus: true, class: 'form-control', placeholder: "Email válido para envio de notas fiscais" %>
-    <%= f.input :cpf, required: true, autofocus: true, class: 'form-control', placeholder: "CPF" %>
+    <%= f.input :cpf, label: "CPF", required: true, autofocus: true, html_input: { class: 'form-control' }, 'data-mask' => "000.000.000-00", placeholder: "CPF" %>
     <%= f.input :endereco, required: true, autofocus: true, class: 'form-control', placeholder: "Endereço Completo" %>
     <%= f.input :telefone, required: true, autofocus: true, class: 'form-control', placeholder: "Telefone" %>
     <%= f.input :password, label: "Senha", required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length), class: 'form-control' %>
