--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,10 @@
 %html
 %head
   %title Itaboraí Rotativo
-  = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-  = javascript_include_tag 'application', 'data-turbolinks-track' => true
+  = stylesheet_link_tag    'application', media: 'all'
+  = javascript_include_tag 'application'
   = csrf_meta_tags
+
 %body
   %header.navbar.navbar-default{:role => "navigation"}
     .navbar-inner
