--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for(current_user) do |f|
   = f.input :nome, required: true, autofocus: true, class: 'form-control', placeholder: "Nome Completo"
   = f.input :email, required: true, autofocus: true, class: 'form-control', placeholder: "Email válido para envio de notas fiscais"
-  = f.input :cpf, required: true, autofocus: true, class: 'form-control', placeholder: "CPF"
+  = f.input :cpf, required: true, autofocus: true, class: 'form-control', placeholder: "CPF", id: 'cpf_form'
   = f.input :endereco, required: true, autofocus: true, class: 'form-control', placeholder: "Endereço Completo"
   = f.input :telefone, required: true, autofocus: true, class: 'form-control', placeholder: "Telefone"
   = f.input :password, label: "Senha", required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length), class: 'form-control'
