--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -38,7 +38,7 @@
       %hr
     %p
       %h4 Comprar Novo Bilhete
-      = link_to 'Novo Bilhete', new_venda_path, class: 'btn btn-primary'
+      = link_to 'Novo Bilhete', new_user_venda_path(current_user), class: 'btn btn-primary'
       %hr
     %p
       %h4 Lista de Ruas com vagas disponíveis
