--- a/app/views/bilhetes/_form.html.haml
+++ b/app/views/bilhetes/_form.html.haml
@@ -1,5 +1,11 @@
 = simple_form_for([current_user, @bilhete]) do |f|
   = f.input :placa_veiculo, label: "Placa do Veículo", hint: "#{link_to 'Cadastrar Veiculo', new_veiculo_path}".html_safe, collection: current_user.veiculos, label_method: :modelo, value_method: :placa_veiculo, require: true, include_blank: false, prompt: "Selecione seu veículo"
-  = f.input :setor, label: "Setor", collection: [['Azul', 'Azul'], ['Verde', 'Verde'], ['Branca', 'Branca']], include_blank: false, require: true, prompt: "Selecione o setor que irá estacional"
+  = f.input :setor_id, label: "Setor", collection: Setor.all.order(cor: :asc), label_method: :cor, value_method: :id, include_blank: false, require: true, prompt: "Selecione o setor que irá estacional"
   = f.input :periodo, label: "Periodos", collection: [["1 Período", 1], ["2 Periodos", 2]], include_blank: false, require: true, prompt: "Selecione quantos períodos deseja?"
+  = f.input :vendido_por, as: :hidden, input_html: { value: 1 }
+  = f.input :status, as: :hidden, input_html: { value: 0 }
+  = f.input :ativado_em, as: :hidden, input_html: { value: Time.now }
   = f.submit "Comprar Bilhete", class: "btn btn-primary pull-right"
+
+
+/:valor_bilhete, :ativado_em,
