--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -25,7 +25,7 @@
             %th Placa do Veículo
             %th Periodos
             %th Ativado em
-            %th Ativar
+            %th Renovar
 
         - @bilhetes_ativos.each do |bilhete|
           %tbody
