--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,7 @@
     <%= f.input :telefone, required: true, autofocus: true, class: 'form-control', placeholder: "Telefone" %>
     <%= f.input :password, label: "Senha", required: true, hint: ("#{@minimum_password_length} caracteres no mínimo" if @minimum_password_length), class: 'form-control' %>
     <%= f.input :password_confirmation, label: "Confirmação de Senha", required: true, class: 'form-control' %>
+    <%= f.input :perfil_id, as: :hidden, input_html: { value: 1 } %>
     <%= f.button :submit, "Cadastrar", class: 'btn btn-primary' %><br>
     <%= render "devise/shared/links" %>
   </div>
