--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Change your password</h2>
+<h2>Troque sua senha</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -7,9 +7,9 @@
   <%= f.full_error :reset_password_token %>
 
   <div class="form-inputs col-md-9">
-    <%= f.input :password, label: "Nova Senha", required: true, autofocus: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class: 'form-control' %>
+    <%= f.input :password, label: "Nova Senha", required: true, autofocus: true, hint: ("#{@minimum_password_length} caracteres no minimo" if @minimum_password_length), class: 'form-control' %>
     <%= f.input :password_confirmation, label: "Confirmar Nova Senha", required: true, class: 'form-control' %>
-    <%= f.button :submit, "Mudar Minha Senha", class: 'btn btn-primary' %>
+    <%= f.button :submit, "Mudar Minha Senha", class: 'btn btn-primary' %><br>
     <%= render "devise/shared/links" %>
   </div>
 <% end %>
