--- a/app/views/veiculos/_form.html.haml
+++ b/app/views/veiculos/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for @veiculo do |f|
-  = f.input :tipo, collection: [[ 'Carro', 'Carro' ], [ 'Moto', "Moto" ]], selected: params[:tipo], include_blank: false
+  = f.input :tipo, collection: [[ 'Carro', 'Carro' ], [ 'Moto', "Moto" ]], selected: params[:tipo], include_blank: false, prompt: "Selecione o tipo de veículo"
   = f.input :placa_veiculo, label: "Placa do Veículo", placeholder: "exemplo: ABC-1234"
   = f.input :modelo, label: "Modelo do Veículo", placeholder: "exemplo: Gol, Onix, Captiva, Titan, Fan, Hornet"
   = f.input :cor, placeholder: "Cor do seu veículo"
