--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
               .nav.navbar-nav.navbar-right
                 %li
                   - if current_user.perfil_id == 1
-                    = link_to "Novo Bilhete", new_user_bilhete_path(current_user)
+                    = link_to "Novo Bilhete", new_user_order_path(current_user)
                   - else
                     %li= link_to "Novo Bilhete", new_user_bilhetepv_path(current_user)
                     /%li= link_to "Relatórios", user_bilhetepvs_path
