--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
                   - if current_user.perfil_id == 1
                     = link_to "Novo Bilhete", new_user_order_path(current_user)
                   - else
-                    %li= link_to "Novo Bilhete", new_user_bilhetepv_path(current_user)
+                    %li= link_to "Novo Bilhete", new_user_order_path(current_user)
                     /%li= link_to "Relatórios", user_bilhetepvs_path
                     %li.dropdown
                       %a.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
