--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,4 @@
-%script{:src => "//maps.google.com/maps/api/js?v=3.23&key=[AIzaSyDuZmkbI2O9bpbBcR5RZXfquilvfvr_fHw]"}
+%script{:src => "//maps.google.com/maps/api/js?v=3.23&key=AIzaSyDuZmkbI2O9bpbBcR5RZXfquilvfvr_fHw"}
 //%script{:src => "//maps.google.com/maps/api/js?v=3.23&sensor=false&client=&key=&libraries=geometry&language=&hl=®ion=" }
 %script{:src => "//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"}
 %script{:src => "//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", :type => "text/javascript"}
